Working on social handler for OAuth2.

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -13,21 +13,18 @@
   </head>
   <body>
     <div class="ui fixed main menu">
-      <div class="container">
-        <div id="statusbox">...</div>
-      </div>
-    </div>
-
-    <div class="ui equal width divided grid">
-      <div class="row">
-        <div class="column">
-          <img>
+      <div class="ui page grid">
+        <div class="one wide column">
+          <a class="popup icon github item" data-content="View project on GitHub" href="https://github.com/mkrentovskiy/wa">
+            <i class="alternate github icon"></i>
+          </a>
         </div>
         <div class="four wide column">
-          <p></p>
+          <div class="item">
+            <div id="statusbox" class="ui label">...</div>
+          </div>                    
         </div>
-        <div class="column">
-          <img>
+      </div>
         </div>
       </div>
     </div>
