--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -13,25 +13,75 @@
     </style> 
   </head>
   <body>
-    <div class="ui page one column centered grid">
-      <div class="column hat">
-        <h1>Application <div id="statusbox" class="floating ui label">...</div></h1>
-      </div>
+    <div class="ui page two column centered grid">
       <div class="column">
-        <a href="/oauth/facebook/login" class="ui facebook button">
-          <i class="facebook icon"></i> Facebook
-        </a>
-        <a href="/oauth/google/login" class="ui google plus button">
-          <i class="google plus icon"></i> Google+
-        </a>
-        <a href="/oauth/vk/login" class="ui vk button">
-          <i class="vk icon"></i> VK
-        </a>
+        <h1>        
+          <div id="statusbox" class="ui label">...</div>
+          Application
+        </h1>
       </div>
+      <div id="userp" class="column">
+        <div class="ui basic buttons userp profile">
+            <div class="ui button">Profile</div>
+            <div class="ui button">Logout</div>
+        </div>
+        <div class="ui basic buttons userp login">
+          <div class="ui button" onclick="$.app.user.modal('reg')">Register</div>
+          <div class="ui button" onclick="$.app.user.modal('log')">Login</div>          
+        </div>
+      </div>
+    </div>
+
+    <div id="user_modal" class="ui modal">
+      <div class="content">
+        <div class="ui two column middle aligned very relaxed stackable grid">
+          <div class="column">
+            <div class="ui form">
+              <div class="field required">
+                <label>E-mail</label>
+                <div class="ui left icon input">
+                  <input type="text" placeholder="user@domain.dtl">
+                  <i class="mail icon"></i>
+                </div>
+              </div>
+              <div class="field required">
+                <label>Password</label>
+                <div class="ui left icon input">
+                  <input type="password">
+                  <i class="lock icon"></i>
+                </div>
+              </div>
+              <div class="field">
+                <div class="g-recaptcha" data-sitekey="6LdqKQkTAAAAAEsBXbaCyCH_k-SGkuFqSiRHssiq"></div>
+              </div>
+              <div class="ui blue submit button">Login</div>
+              <div class="ui basic button">Reset password</div>
+            </div>
+          </div>
+          <div class="ui vertical divider">Or</div>
+          <div class="center aligned column">
+            <a href="/oauth/facebook/login" class="ui facebook button">
+              <i class="facebook icon"></i> Facebook
+            </a>
+            <a href="/oauth/google/login" class="ui google plus button">
+              <i class="google icon"></i> Google
+            </a>
+            <a href="/oauth/vk/login" class="ui vk button">
+              <i class="vk icon"></i> VK
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>    
+
+    <div class="hide">
     </div>
 
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/semantic.min.js"></script>
+    
+    <script src='https://www.google.com/recaptcha/api.js'></script> 
+
     <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
