Done with OAuth accounts unbinding.

--- a/priv/www/index.html
+++ b/priv/www/index.html
@@ -101,16 +101,21 @@
             </form>
           </div>
           <div class="ui vertical divider e reg log">Or</div>
-          <div class="center aligned column e reg log">
-            <a href="/oauth/facebook/login" class="ui facebook button">
-              <i class="facebook icon"></i> Facebook
-            </a>
-            <a href="/oauth/google/login" class="ui google plus button">
-              <i class="google icon"></i> Google
-            </a>
-            <a href="/oauth/vk/login" class="ui vk button">
-              <i class="vk icon"></i> VK
-            </a>
+          <div class="ui vertical divider e prof"><i class="user icon"></i></div>
+          <div class="center aligned column">
+            <div id="user_socials" class="ui items e prof"></div>
+            <div class="ui horizontal divider e prof">Link another account</div>
+            <div class="e reg log prof">          
+              <a href="/oauth/facebook/login" class="ui facebook button">
+                <i class="facebook icon"></i> Facebook
+              </a>
+              <a href="/oauth/google/login" class="ui google plus button">
+                <i class="google icon"></i> Google
+              </a>
+              <a href="/oauth/vk/login" class="ui vk button">
+                <i class="vk icon"></i> VK
+              </a>
+            </div>
           </div>
         </div>
       </div>
